--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="right">
             <ul>
                 <li><a href="">Categories</a></li>
-                <li><a href="">Meal Ideas</a></li>
+                <li><a href="">Meal Favourites</a></li>
             </ul>
         </div>
     
