add vegan option

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="cf">
         <div class="box">
             <a href=""><img src="https://c1.staticflickr.com/3/2937/34046329521_a79016448c_o.jpg">
-            <p>Vegeterian</p>
+            <p>Vegan</p>
             </a>
         </div>
     
